@@ -12,7 +12,7 @@ import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 public class ClaudeClient {
-    private final String BASE_SYSTEM_PROMPT ;
+    private final String BASE_SYSTEM_PROMPT;
     private final OkHttpClient httpClient;
     private final Gson gson;
     private final String apiKey;
@@ -21,7 +21,7 @@ public class ClaudeClient {
     private final ClaudeConfig config;
     private final ToolExecutor toolExecutor;
 
-    public ClaudeClient(ClaudeConfig config, String prompt,ToolExecutor toolExecutor) {
+    public ClaudeClient(ClaudeConfig config, String prompt, ToolExecutor toolExecutor) {
         this.config = config;
         this.apiKey = config.getApiKey();
         this.apiUrl = config.getApiUrl();
@@ -33,51 +33,51 @@ public class ClaudeClient {
         this.gson = new Gson();
         this.conversationHistory = new ArrayList<>();
         this.toolExecutor = toolExecutor;
-        this.BASE_SYSTEM_PROMPT=prompt;
+        this.BASE_SYSTEM_PROMPT = prompt;
 
     }
 
     public ClaudeClient(ClaudeConfig config, String prompt) {
-this(config,prompt,null);
+        this(config, prompt, null);
     }
 
-    public String sendMessage(String userMessage,String context, List<Tool> availableTools) throws IOException {
-        JsonObject requestBody = buildRequestBody(userMessage, context,availableTools);
+    public String sendMessage(String userMessage, String context, List<Tool> availableTools) throws IOException {
+        JsonObject requestBody = buildRequestBody(userMessage, context, availableTools);
         //timeout
         Request request = new Request.Builder()
-                .url(apiUrl+"messages")
+                .url(apiUrl + "messages")
                 .post(RequestBody.create(MediaType.parse("application/json"), requestBody.toString()))
                 .addHeader("x-api-key", apiKey)
                 .addHeader("anthropic-version", config.getAnthropicVersion())
                 .build();
-        BoykaAILogger.info("sendMessage Request: " + requestBody.toString());
+        BoykaAILogger.info("sendMessage Request: " + requestBody);
         try (Response response = httpClient.newCall(request).execute()) {
             if (!response.isSuccessful()) {
-                BoykaAILogger.warn("sendMessage Unexpected code " + response.code()+ " " + response.body().string());
-                throw new IOException("Unexpected code " + response+ " " + response.body().string());
+                BoykaAILogger.warn("sendMessage Unexpected code " + response.code() + " " + response.body().string());
+                throw new IOException("Unexpected code " + response.code() + " " + response.body().string());
             }
 
             String responseBody = response.body().string();
             AIClaudeResponse claudeResponse = gson.fromJson(responseBody, AIClaudeResponse.class);
             BoykaAILogger.info("sendMessage Response: " + responseBody);
             String finalResponse = processClaudeResponse(claudeResponse, availableTools);
-            conversationHistory.add(new Message("assistant", finalResponse));
             return finalResponse;
         }
     }
-    public String sendMessageNoHistory(String systemPrompt,String userMessage,String context, List<Tool> availableTools) throws IOException {
-        JsonObject requestBody = buildRequestBody(systemPrompt,userMessage, context,availableTools);
+
+    public String sendMessageNoHistory(String systemPrompt, String userMessage, String context, List<Tool> availableTools) throws IOException {
+        JsonObject requestBody = buildRequestBody(systemPrompt, userMessage, context, availableTools);
         Request request = new Request.Builder()
-                .url(apiUrl+"messages")
+                .url(apiUrl + "messages")
                 .post(RequestBody.create(MediaType.parse("application/json"), requestBody.toString()))
                 .addHeader("x-api-key", apiKey)
                 .addHeader("anthropic-version", config.getAnthropicVersion())
                 .build();
-        BoykaAILogger.info("sendMessageNoHistory Request: " + requestBody.toString());
+        BoykaAILogger.info("sendMessageNoHistory Request: " + requestBody);
         try (Response response = httpClient.newCall(request).execute()) {
             if (!response.isSuccessful()) {
-                BoykaAILogger.warn("sendMessageNoHistory Unexpected code " + response.code()+ " " + response.body().string());
-                throw new IOException("Unexpected code " + response+ " " + response.body().string());
+                BoykaAILogger.warn("sendMessageNoHistory Unexpected code " + response.code() + " " + response.body().string());
+                throw new IOException("Unexpected code " + response + " " + response.body().string());
             }
 
             String responseBody = response.body().string();
@@ -89,17 +89,23 @@ this(config,prompt,null);
     }
 
 
-    private JsonObject buildRequestBody(String userMessage, String context,List<Tool> availableTools) {
+    private JsonObject buildRequestBody(String userMessage, String context, List<Tool> availableTools) {
         JsonObject requestBody = new JsonObject();
         requestBody.addProperty("model", config.getModel());
         requestBody.addProperty("max_tokens", config.getMaxTokens());
-        requestBody.addProperty("system",       BASE_SYSTEM_PROMPT+ "\n\nContext: " + context);
+        requestBody.addProperty("system", BASE_SYSTEM_PROMPT);
+        if (!context.isEmpty()) {
+            requestBody.addProperty("system", BASE_SYSTEM_PROMPT.replace("<content></content>", "\n\nFile Context: " + context + "\n\n"));
+        }
         JsonArray messages = new JsonArray();
         for (Message message : conversationHistory) {
             messages.add(message.toJsonObject());
         }
-        messages.add(new Message("user", userMessage).toJsonObject());
-        conversationHistory.add(new Message("user", userMessage));
+        if (userMessage != null && !userMessage.isEmpty()) {
+
+            messages.add(new Message("user", userMessage).toJsonObject());
+            conversationHistory.add(new Message("user", userMessage));
+        }
         requestBody.add("messages", messages);
 
         JsonArray toolsArray = new JsonArray();
@@ -111,16 +117,19 @@ this(config,prompt,null);
         return requestBody;
     }
 
-    private JsonObject buildRequestBody(String systemPrompt,String userMessage, String context,List<Tool> availableTools) {
+    private JsonObject buildRequestBody(String systemPrompt, String userMessage, String context, List<Tool> availableTools) {
         JsonObject requestBody = new JsonObject();
         requestBody.addProperty("model", config.getModel());
         requestBody.addProperty("max_tokens", config.getMaxTokens());
-        requestBody.addProperty("system",       systemPrompt);
-        JsonArray messages = new JsonArray();
+        requestBody.addProperty("system", systemPrompt);
 
-        messages.add(new Message("user", userMessage).toJsonObject());
+        JsonArray messages = new JsonArray();
+        if (userMessage != null && !userMessage.isEmpty()) {
+
+            messages.add(new Message("user", userMessage).toJsonObject());
+        }
         requestBody.add("messages", messages);
-        if (!availableTools.isEmpty()){
+        if (!availableTools.isEmpty()) {
             JsonArray toolsArray = new JsonArray();
             for (Tool tool : availableTools) {
                 toolsArray.add(tool.toClaudeFormat());
@@ -136,21 +145,21 @@ this(config,prompt,null);
         StringBuilder finalResponse = new StringBuilder();
 
         for (ContentBlock block : claudeResponse.content) {
+            String  text ="";
             if ("text".equals(block.type)) {
                 finalResponse.append(block.text).append("\n");
-//                conversationHistory.add(new Message("assistant", block.text));
             } else if ("tool_use".equals(block.type)) {
-                conversationHistory.add(new Message("assistant", Arrays.asList(block)));
                 String toolResult = executeToolCall(block);
-                finalResponse.append("Tool used: ").append(block.name)
-                        .append("\nResult: ").append(toolResult).append("\n");
-                conversationHistory.add(new Message("user", Arrays.asList(
+                conversationHistory.add(new Message("assistant", List.of(block)));
+//                finalResponse.append("Tool used: ").append(block.name)
+//                        .append("\nResult: ").append(toolResult).append("\n");
+                conversationHistory.add(new Message("user", List.of(
                         new ToolResult(block.id, toolResult, false)
                 )));
 
                 String claudeResponseToTool = sendToolResultToClaude(block.id, toolResult, availableTools);
 
-                finalResponse.append("AI response: ").append(claudeResponseToTool).append("\n");
+                finalResponse.append(claudeResponseToTool).append("\n");
             }
         }
 
@@ -159,50 +168,38 @@ this(config,prompt,null);
 
     private String executeToolCall(ContentBlock toolUseBlock) {
         if (toolExecutor == null) {
-            return "Tool execution is not available.";
+            return "Error: Tool execution is not available.";
         }
         return toolExecutor.executeToolCall(toolUseBlock.name, gson.toJson(toolUseBlock.input));
     }
 
     private String sendToolResultToClaude(String toolUseId, String toolResult, List<Tool> availableTools) throws IOException {
-        JsonObject requestBody = new JsonObject();
-        requestBody.addProperty("model", config.getModel());
-        requestBody.addProperty("max_tokens", config.getMaxTokens());
-
-        JsonArray messages = new JsonArray();
-        for (Message message : conversationHistory) {
-            messages.add(message.toJsonObject());
-        }
-        JsonArray toolsArray = new JsonArray();
-        for (Tool tool : availableTools) {
-            toolsArray.add(tool.toClaudeFormat());
-        }
-        requestBody.add("tools", toolsArray);
-
-//        JsonObject toolResultMessage = new JsonObject();
-//        toolResultMessage.addProperty("role", "user");
-//        JsonArray content = new JsonArray();
-//        JsonObject toolResultContent = new JsonObject();
-//        toolResultContent.addProperty("type", "tool_result");
-//        toolResultContent.addProperty("tool_use_id", toolUseId);
-//        toolResultContent.addProperty("content", toolResult);
-//        content.add(toolResultContent);
-//        toolResultMessage.add("content", content);
-//        messages.add(toolResultMessage);
-
-        requestBody.add("messages", messages);
-
+//        JsonObject requestBody = new JsonObject();
+//        requestBody.addProperty("model", config.getModel());
+//        requestBody.addProperty("max_tokens", config.getMaxTokens());
+//
+//        JsonArray messages = new JsonArray();
+//        for (Message message : conversationHistory) {
+//            messages.add(message.toJsonObject());
+//        }
+//        JsonArray toolsArray = new JsonArray();
+//        for (Tool tool : availableTools) {
+//            toolsArray.add(tool.toClaudeFormat());
+//        }
+//        requestBody.add("tools", toolsArray);
+//        requestBody.add("messages", messages);
+        JsonObject requestBody = buildRequestBody( "", "", availableTools);
         Request request = new Request.Builder()
-                .url(apiUrl+"messages")
+                .url(apiUrl + "messages")
                 .post(RequestBody.create(MediaType.parse("application/json"), requestBody.toString()))
                 .addHeader("x-api-key", apiKey)
                 .addHeader("anthropic-version", config.getAnthropicVersion())
                 .build();
-        BoykaAILogger.info("sendToolResultToClaude Request: " + requestBody.toString());
+        BoykaAILogger.info("sendToolResultToClaude Request: " + requestBody);
         try (Response response = httpClient.newCall(request).execute()) {
             if (!response.isSuccessful()) {
-                BoykaAILogger.warn("sendToolResultToClaude Unexpected code " + response.code()+ " " + response.body().string());
-                throw new IOException("sendToolResultToClaude Unexpected code " + response);
+                BoykaAILogger.warn("sendToolResultToClaude Unexpected code " + response.code() + " " + response.body().string());
+                throw new IOException("sendToolResultToClaude Unexpected code " + response.code() + " " + response.body().string());
             }
 
             String responseBody = response.body().string();
@@ -210,13 +207,13 @@ this(config,prompt,null);
 
             if (claudeResponse.content != null && !claudeResponse.content.isEmpty()) {
                 String responseText = claudeResponse.content.get(0).text;
-//                conversationHistory.add(new Message("assistant", responseText));
+                conversationHistory.add(new Message("assistant", responseText));
                 return responseText;
             }
-        }catch (Exception e){
+        } catch (Exception e) {
             BoykaAILogger.warn("sendToolResultToClaude Unexpected code " + e.getMessage());
             BoykaAILogger.error("Error in tool execution", e);
-            return "An error occurred during tool execution: " + e.getMessage();
+            return "Error: An error occurred during tool execution: " + e.getMessage();
         }
 
         return "No response from Claude";
